--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "2. We input the mix of each chunk into the deep model, and measure the metrics.\n",
     "\n",
-    "3. To calculate mean, median, and standard deviation, we the mean, median, and standard deviation across all tracks. We refer to mean, median, and standard deviation to be summary statistics.\n",
+    "3. To calculate mean, median, and standard deviation, we find the mean, median, and standard deviation across all tracks. We refer to mean, median, and standard deviation to be summary statistics.\n",
     "\n",
     "4. To calculate summary statistics of a specific source, we only consider the metrics collected for said source. To calculate summary statistics across all sources, we aggregate the metrics for each chunk by finding the mean across all sources, then we calculate the summary statistic over each mean.\n",
     "\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
