looking at rankings

--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -33,13 +33,7 @@
    "source": [
     "As different state-of-the-art source separation systems use different methods of recording metrics, we define our own way of calculating it:\n",
     "\n",
-    "1. First we segment each song in the MUSDB18 test set into 8 second chunks, where the start of each chunk is 4 seconds from the previous one. We throw out any chunks that do not have sound in all sources.\n",
-    "\n",
-    "2. We input the mix of each chunk into the deep model, and measure the metrics.\n",
-    "\n",
-    "3. To calculate mean, median, and standard deviation, we find the mean, median, and standard deviation across all tracks. We refer to mean, median, and standard deviation to be summary statistics.\n",
-    "\n",
-    "4. To calculate summary statistics of a specific source, we only consider the metrics collected for said source. To calculate summary statistics across all sources, we aggregate the metrics for each chunk by finding the mean across all sources, then we calculate the summary statistic over each mean.\n",
+    "1. \n",
     "\n",
     "This method of calculating metrics was concieved before calculating summary statistics of any model, and no intentional bias exists toward any model, which may not be the case for evaluation methods in other papers. "
    ],
@@ -111,6 +105,7 @@
    "source": [
     "# Gathering data\n",
     "raw_data = {}\n",
+    "# To add new models, only a single line here must be added\n",
     "raw_data[\"OpenUnmix\"] = pd.read_csv(\"results/OpenUnmix/MUSDB18Segmented/aggreggate.csv\")\n",
     "raw_data[\"Demucs\"] = pd.read_csv(\"results/Demucs/MUSDB18Segmented/aggreggate.csv\")\n",
     "raw_data[\"ConvTasNet\"] = pd.read_csv(\"results/ConvTasNet/MUSDB18Segmented/aggreggate.csv\")\n",
@@ -220,15 +215,108 @@
   },
   {
    "source": [
-    "Observations: If you rank these algorithms by any combination of {mean, median} and {SDR, SI-SDR, and SI-SDRi},\n",
-    "you will get the ranking 'CONV-TASNET', DEMUCS', 'OPEN_UNMIX', and 'WAVE-U-NET'. This suggests, in the contexts of ranking algorithms by SDR, SI-SDR and SI-SDRi are just as good."
+    "Observations: \n",
+    "+ If you rank these algorithms by any combination of {mean, median} and {SDR, SI-SDR, and SI-SDRi},\n",
+    "you will get the ranking 'CONV-TASNET', DEMUCS', 'OPEN_UNMIX', and 'WAVE-U-NET'. This suggests, in the contexts of ranking algorithms by SDR, SI-SDR and SI-SDRi are just as good. \n",
+    "+ Note how ConvTasNet has a higher std dev SI-SDR than Demucs, while Demucs has a higher std dev for SDR than ConvTasNet. This could mean nothing, but it could also be a sign about outliers in the data, and how SDR and SI-SDR handle scale."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "'OpenUnmix'"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "                      mean     median   std dev\nbass: SDR         4.600220   5.039939  6.152940\nbass: SI-SDR      2.477880   3.514696  7.645522\nbass: SI-SDRi     9.477115  10.082160  5.250655\ndrums: SDR        5.889356   5.958959  4.157600\ndrums: SI-SDR     4.351930   4.705449  4.898521\ndrums: SI-SDRi    9.061415   9.441004  3.896217\nother: SDR        3.735364   3.837369  2.831660\nother: SI-SDR     0.744644   1.763143  5.416857\nother: SI-SDRi    6.266366   6.554414  5.055254\nvocals: SDR       5.684497   6.551987  6.366212\nvocals: SI-SDR    4.376445   5.863696  8.980652\nvocals: SI-SDRi  10.339674  10.957337  5.723216",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>mean</th>\n      <th>median</th>\n      <th>std dev</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>bass: SDR</th>\n      <td>4.600220</td>\n      <td>5.039939</td>\n      <td>6.152940</td>\n    </tr>\n    <tr>\n      <th>bass: SI-SDR</th>\n      <td>2.477880</td>\n      <td>3.514696</td>\n      <td>7.645522</td>\n    </tr>\n    <tr>\n      <th>bass: SI-SDRi</th>\n      <td>9.477115</td>\n      <td>10.082160</td>\n      <td>5.250655</td>\n    </tr>\n    <tr>\n      <th>drums: SDR</th>\n      <td>5.889356</td>\n      <td>5.958959</td>\n      <td>4.157600</td>\n    </tr>\n    <tr>\n      <th>drums: SI-SDR</th>\n      <td>4.351930</td>\n      <td>4.705449</td>\n      <td>4.898521</td>\n    </tr>\n    <tr>\n      <th>drums: SI-SDRi</th>\n      <td>9.061415</td>\n      <td>9.441004</td>\n      <td>3.896217</td>\n    </tr>\n    <tr>\n      <th>other: SDR</th>\n      <td>3.735364</td>\n      <td>3.837369</td>\n      <td>2.831660</td>\n    </tr>\n    <tr>\n      <th>other: SI-SDR</th>\n      <td>0.744644</td>\n      <td>1.763143</td>\n      <td>5.416857</td>\n    </tr>\n    <tr>\n      <th>other: SI-SDRi</th>\n      <td>6.266366</td>\n      <td>6.554414</td>\n      <td>5.055254</td>\n    </tr>\n    <tr>\n      <th>vocals: SDR</th>\n      <td>5.684497</td>\n      <td>6.551987</td>\n      <td>6.366212</td>\n    </tr>\n    <tr>\n      <th>vocals: SI-SDR</th>\n      <td>4.376445</td>\n      <td>5.863696</td>\n      <td>8.980652</td>\n    </tr>\n    <tr>\n      <th>vocals: SI-SDRi</th>\n      <td>10.339674</td>\n      <td>10.957337</td>\n      <td>5.723216</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "'Demucs'"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "                      mean     median   std dev\nbass: SDR         5.838194   6.333488  6.404391\nbass: SI-SDR      4.314169   5.268259  7.160211\nbass: SI-SDRi    11.317342  11.715631  4.770529\ndrums: SDR        7.070687   6.994881  4.228774\ndrums: SI-SDR     6.088535   6.103106  4.374326\ndrums: SI-SDRi   10.799997  11.067704  3.456550\nother: SDR        3.973712   4.130461  3.420524\nother: SI-SDR     1.656913   2.227863  4.426160\nother: SI-SDRi    7.174239   7.324543  4.270892\nvocals: SDR       6.075435   6.836668  5.958214\nvocals: SI-SDR    4.647570   6.200620  8.634317\nvocals: SI-SDRi  10.608473  11.030428  5.400393",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>mean</th>\n      <th>median</th>\n      <th>std dev</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>bass: SDR</th>\n      <td>5.838194</td>\n      <td>6.333488</td>\n      <td>6.404391</td>\n    </tr>\n    <tr>\n      <th>bass: SI-SDR</th>\n      <td>4.314169</td>\n      <td>5.268259</td>\n      <td>7.160211</td>\n    </tr>\n    <tr>\n      <th>bass: SI-SDRi</th>\n      <td>11.317342</td>\n      <td>11.715631</td>\n      <td>4.770529</td>\n    </tr>\n    <tr>\n      <th>drums: SDR</th>\n      <td>7.070687</td>\n      <td>6.994881</td>\n      <td>4.228774</td>\n    </tr>\n    <tr>\n      <th>drums: SI-SDR</th>\n      <td>6.088535</td>\n      <td>6.103106</td>\n      <td>4.374326</td>\n    </tr>\n    <tr>\n      <th>drums: SI-SDRi</th>\n      <td>10.799997</td>\n      <td>11.067704</td>\n      <td>3.456550</td>\n    </tr>\n    <tr>\n      <th>other: SDR</th>\n      <td>3.973712</td>\n      <td>4.130461</td>\n      <td>3.420524</td>\n    </tr>\n    <tr>\n      <th>other: SI-SDR</th>\n      <td>1.656913</td>\n      <td>2.227863</td>\n      <td>4.426160</td>\n    </tr>\n    <tr>\n      <th>other: SI-SDRi</th>\n      <td>7.174239</td>\n      <td>7.324543</td>\n      <td>4.270892</td>\n    </tr>\n    <tr>\n      <th>vocals: SDR</th>\n      <td>6.075435</td>\n      <td>6.836668</td>\n      <td>5.958214</td>\n    </tr>\n    <tr>\n      <th>vocals: SI-SDR</th>\n      <td>4.647570</td>\n      <td>6.200620</td>\n      <td>8.634317</td>\n    </tr>\n    <tr>\n      <th>vocals: SI-SDRi</th>\n      <td>10.608473</td>\n      <td>11.030428</td>\n      <td>5.400393</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "'ConvTasNet'"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "                      mean     median   std dev\nbass: SDR         6.245008   6.693001  5.917041\nbass: SI-SDR      4.068171   5.672799  9.019312\nbass: SI-SDRi    11.071345  12.219177  6.626964\ndrums: SDR        7.559869   7.563258  4.011636\ndrums: SI-SDR     6.526681   6.769751  4.929581\ndrums: SI-SDRi   11.238143  11.658954  3.679415\nother: SDR        4.353640   4.488937  2.824071\nother: SI-SDR     1.773237   2.676800  4.983473\nother: SI-SDRi    7.290562   7.390878  4.541678\nvocals: SDR       6.293704   6.867305  4.972601\nvocals: SI-SDR    4.643061   6.223038  9.380578\nvocals: SI-SDRi  10.603964  11.215671  5.802657",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>mean</th>\n      <th>median</th>\n      <th>std dev</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>bass: SDR</th>\n      <td>6.245008</td>\n      <td>6.693001</td>\n      <td>5.917041</td>\n    </tr>\n    <tr>\n      <th>bass: SI-SDR</th>\n      <td>4.068171</td>\n      <td>5.672799</td>\n      <td>9.019312</td>\n    </tr>\n    <tr>\n      <th>bass: SI-SDRi</th>\n      <td>11.071345</td>\n      <td>12.219177</td>\n      <td>6.626964</td>\n    </tr>\n    <tr>\n      <th>drums: SDR</th>\n      <td>7.559869</td>\n      <td>7.563258</td>\n      <td>4.011636</td>\n    </tr>\n    <tr>\n      <th>drums: SI-SDR</th>\n      <td>6.526681</td>\n      <td>6.769751</td>\n      <td>4.929581</td>\n    </tr>\n    <tr>\n      <th>drums: SI-SDRi</th>\n      <td>11.238143</td>\n      <td>11.658954</td>\n      <td>3.679415</td>\n    </tr>\n    <tr>\n      <th>other: SDR</th>\n      <td>4.353640</td>\n      <td>4.488937</td>\n      <td>2.824071</td>\n    </tr>\n    <tr>\n      <th>other: SI-SDR</th>\n      <td>1.773237</td>\n      <td>2.676800</td>\n      <td>4.983473</td>\n    </tr>\n    <tr>\n      <th>other: SI-SDRi</th>\n      <td>7.290562</td>\n      <td>7.390878</td>\n      <td>4.541678</td>\n    </tr>\n    <tr>\n      <th>vocals: SDR</th>\n      <td>6.293704</td>\n      <td>6.867305</td>\n      <td>4.972601</td>\n    </tr>\n    <tr>\n      <th>vocals: SI-SDR</th>\n      <td>4.643061</td>\n      <td>6.223038</td>\n      <td>9.380578</td>\n    </tr>\n    <tr>\n      <th>vocals: SI-SDRi</th>\n      <td>10.603964</td>\n      <td>11.215671</td>\n      <td>5.802657</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "'Wave-U-Net'"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "                     mean    median   std dev\nbass: SDR        2.512389  3.091650  6.071732\nbass: SI-SDR    -0.162730  0.566720  6.468393\nbass: SI-SDRi    6.840443  7.557735  4.312968\ndrums: SDR       3.912150  3.961964  3.797256\ndrums: SI-SDR    1.311155  1.819594  4.924104\ndrums: SI-SDRi   6.022617  6.568623  4.179983\nother: SDR       2.227695  2.251655  2.380516\nother: SI-SDR   -2.162498 -1.146460  5.002933\nother: SI-SDRi   3.354828  3.838635  4.108231\nvocals: SDR      3.856134  4.455277  5.169745\nvocals: SI-SDR   1.622919  3.090726  7.927899\nvocals: SI-SDRi  7.583822  7.740668  4.490457",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>mean</th>\n      <th>median</th>\n      <th>std dev</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>bass: SDR</th>\n      <td>2.512389</td>\n      <td>3.091650</td>\n      <td>6.071732</td>\n    </tr>\n    <tr>\n      <th>bass: SI-SDR</th>\n      <td>-0.162730</td>\n      <td>0.566720</td>\n      <td>6.468393</td>\n    </tr>\n    <tr>\n      <th>bass: SI-SDRi</th>\n      <td>6.840443</td>\n      <td>7.557735</td>\n      <td>4.312968</td>\n    </tr>\n    <tr>\n      <th>drums: SDR</th>\n      <td>3.912150</td>\n      <td>3.961964</td>\n      <td>3.797256</td>\n    </tr>\n    <tr>\n      <th>drums: SI-SDR</th>\n      <td>1.311155</td>\n      <td>1.819594</td>\n      <td>4.924104</td>\n    </tr>\n    <tr>\n      <th>drums: SI-SDRi</th>\n      <td>6.022617</td>\n      <td>6.568623</td>\n      <td>4.179983</td>\n    </tr>\n    <tr>\n      <th>other: SDR</th>\n      <td>2.227695</td>\n      <td>2.251655</td>\n      <td>2.380516</td>\n    </tr>\n    <tr>\n      <th>other: SI-SDR</th>\n      <td>-2.162498</td>\n      <td>-1.146460</td>\n      <td>5.002933</td>\n    </tr>\n    <tr>\n      <th>other: SI-SDRi</th>\n      <td>3.354828</td>\n      <td>3.838635</td>\n      <td>4.108231</td>\n    </tr>\n    <tr>\n      <th>vocals: SDR</th>\n      <td>3.856134</td>\n      <td>4.455277</td>\n      <td>5.169745</td>\n    </tr>\n    <tr>\n      <th>vocals: SI-SDR</th>\n      <td>1.622919</td>\n      <td>3.090726</td>\n      <td>7.927899</td>\n    </tr>\n    <tr>\n      <th>vocals: SI-SDRi</th>\n      <td>7.583822</td>\n      <td>7.740668</td>\n      <td>4.490457</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {}
+    }
+   ],
+   "source": [
+    "## How does this hold across sources?\n",
+    "for name, df_dict in summary_source_data.items():\n",
+    "    display(name)\n",
+    "    to_concat = []\n",
+    "    for source, df in df_dict.items():\n",
+    "        values = df.loc[[\"SDR\", \"SI-SDR\", \"SI-SDRi\"]]\n",
+    "        values.rename({\"SDR\": f\"{source}: SDR\",\n",
+    "                       \"SI-SDR\": f\"{source}: SI-SDR\",\n",
+    "                       \"SI-SDRi\": f\"{source}: SI-SDRi\"},\n",
+    "                      inplace=True)\n",
+    "        to_concat.append(values)\n",
+    "    df_concat = pd.concat(to_concat)\n",
+    "    display(df_concat)"
+   ]
+  },
+  {
+   "source": [
+    "### Observations\n",
+    "+ So while the above dataframes just seems like a bunch of numbers, the rankings of models should be noted. Notably, in the mean and median values for Vocal SDR, the ranking of models is: Conv-TasNet, Demucs, OpenUnmix, Wave-U-Net. This differs from the rankings of models on papers with code, where Conv-TasNet and Demucs are swapped. (This is also true for the Other source)\n",
+    "+ The difference in mean Vocal SDR between Demucs and Conv-TasNet is .22, while in median, the difference is .03. This implies that there exists some outliers on the low end of SDR for Demucs"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "## "
+    "## SAR"
    ],
    "cell_type": "markdown",
    "metadata": {}
