added instructions blurb and SAR

--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -31,9 +31,15 @@
   },
   {
    "source": [
-    "As different state-of-the-art source separation systems use different methods of recording metrics, we define our own way of calculating it:\n",
+    "As different state-of-the-art source separation systems use different methods of recording metrics, we define our own way of calculating it on the MUSDB18 dataset:\n",
     "\n",
-    "1. \n",
+    "1. For each song in the MUSDB18 dataset, create overlapping 8 second chunks, where the first chunk of each song is at 0 seconds, and each subsequent chunk starts 4 seconds after the previous one.\n",
+    "\n",
+    "2. Remove chunks that do not have adaquate sound for all sources. For each song, this is done by finding the chunk with the maximum power in each source, which we call the reference chunk, and removing all chunks with power less than 8 db than the reference chunk.\n",
+    "\n",
+    "3. Separate the mix in each chunk using the desired model. Record metrics. \n",
+    "\n",
+    "4. Summary statistics are mean, median, and standard deviation. To calculate the summary statistics of a metric for one source, we calculate the statistic over the recorded metric over all chunks. To calculate the summary statistics of a metric over all sources, we first find the mean metric for all sources in each chunk, then we calculate the summary statistics over these means. \n",
     "\n",
     "This method of calculating metrics was concieved before calculating summary statistics of any model, and no intentional bias exists toward any model, which may not be the case for evaluation methods in other papers. "
    ],
@@ -320,6 +326,85 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "'OpenUnmix'"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "            mean    median   std dev\nSAR     7.176612  7.091356  1.560591\nSI-SAR  3.877729  4.443823  3.577261",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>mean</th>\n      <th>median</th>\n      <th>std dev</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>SAR</th>\n      <td>7.176612</td>\n      <td>7.091356</td>\n      <td>1.560591</td>\n    </tr>\n    <tr>\n      <th>SI-SAR</th>\n      <td>3.877729</td>\n      <td>4.443823</td>\n      <td>3.577261</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "'Demucs'"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "            mean    median   std dev\nSAR     7.438870  7.487287  1.773577\nSI-SAR  4.852725  5.362100  3.249555",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>mean</th>\n      <th>median</th>\n      <th>std dev</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>SAR</th>\n      <td>7.438870</td>\n      <td>7.487287</td>\n      <td>1.773577</td>\n    </tr>\n    <tr>\n      <th>SI-SAR</th>\n      <td>4.852725</td>\n      <td>5.362100</td>\n      <td>3.249555</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "'ConvTasNet'"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "            mean    median   std dev\nSAR     7.644756  7.803368  2.040657\nSI-SAR  5.018947  5.785666  3.989788",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>mean</th>\n      <th>median</th>\n      <th>std dev</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>SAR</th>\n      <td>7.644756</td>\n      <td>7.803368</td>\n      <td>2.040657</td>\n    </tr>\n    <tr>\n      <th>SI-SAR</th>\n      <td>5.018947</td>\n      <td>5.785666</td>\n      <td>3.989788</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "'Wave-U-Net'"
+     },
+     "metadata": {}
+    },
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "            mean    median   std dev\nSAR     5.130867  5.244051  1.396923\nSI-SAR  1.258896  1.834626  3.108180",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>mean</th>\n      <th>median</th>\n      <th>std dev</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>SAR</th>\n      <td>5.130867</td>\n      <td>5.244051</td>\n      <td>1.396923</td>\n    </tr>\n    <tr>\n      <th>SI-SAR</th>\n      <td>1.258896</td>\n      <td>1.834626</td>\n      <td>3.108180</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {}
+    }
+   ],
+   "source": [
+    "for name, df in summary_aggreggate_data.items():\n",
+    "    display(name)\n",
+    "    display(df.loc[[\"SAR\", \"SI-SAR\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
